# perfhook

./: .gitignore  build.bat  format.ps1  meson.build  msvc-build.bat
hooklib/: meson.build
lib/d3d9/: d3d9.c  meson.build
lib/nvidia/: meson.build  nvidia.c  nvidia.h
main/: dllmain.c  meson.build
src/: dllmain.c  meson.build
src/d3d9/: d3d9.c  d3d9.h  meson.build
src/d3d9_hook/: d3d9_hook.c  meson.build
src/nvidia/: meson.build  nvidia.c  nvidia.h
src/util/: meson.build  winapi.c  winapi.h
subprojects/: capnhook.wrap
util/: meson.build  winapi.c  winapi.h
